<resources>
    <string name="app_name">Sliding Game</string>
    <string name="btn_notification">Please hit one of the round buttons</string>
    <string name="one_player_game_description">One player game! Play with AI!</string>
    <string name="two_player_game_description">Two player game! Play with your friend!</string>
    <string name="queston_btn_description">About the game!!!</string>
    <string name="setting_btn_description">Change the setting of the game</string>
    <string name="about_game">About this game</string>
    <string name="about_description">This is a game about gravity gobang. The rule is the same as Gobang, but we also have gravity feature!!!</string>
    <string name="okay_btn">Understand.</string>
    <string name="music_question">Want musics?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="play_one_win_counts">Brown dog player win counts:</string>
    <string name="play_two_win_counts">Husky dog player win counts:</string>
    <string name="gameOverTitle">Game Over!!!</string>
    <string name="tie_game">TIE GAME!!!Wanna play again?</string>
    <string name="player_one_wins">Brown dog player wins!</string>
    <string name="player_two_wins">Husky dog player wins!</string>


    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>