<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/front_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:contentDescription="@string/one_player_game_description" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="340dp"
        android:contentDescription="@string/two_player_game_description" />

    <ImageView
        android:id="@+id/question_mark"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/queston_btn_description"
        android:src="@drawable/question" />

    <ImageView
        android:id="@+id/setting"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/setting"
        android:contentDescription="@string/setting_btn_description" />

</RelativeLayout>